--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <li class="list-name">Work</li>
             <li class="list-name">Grocery</li> -->
         </ul>
-        <form action="">
-            <input type="text" class="new list" placeholder="new list name" aria-label="new list name" />
+
+        <form action="" data-new-list-form>
+            <input type="text" class="new list"
+            data-new-list-input placeholder="new list name" aria-label="new list name" />
             <button class="btn create" aria-label="create new list">+</button>
         </form>
     </div>
@@ -63,8 +65,8 @@
                         </form>
                     </div>
                     <div class="delete-stuff">
-                        <button class="btn delete">Clear completed tasks</button>
-                        <button class="btn delete">Delete list</button>
+                        <button class="btn delete ">Clear completed tasks</button>
+                        <button class="btn delete data-delete-list-button">Delete list</button>
 
                     </div>
                 </div>
